--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack server --open"
+    "start": "webpack server"
   },
   "keywords": [],
   "author": "Gianluca Fuoco",
